--- a/county_price.ipynb
+++ b/county_price.ipynb
@@ -15,7 +15,7 @@
   "orig_nbformat": 2,
   "kernelspec": {
    "name": "python3",
-   "display_name": "Python 3.8.7 64-bit",
+   "display_name": "Python 3.8.7 64-bit ('comp': venv)",
    "metadata": {
     "interpreter": {
      "hash": "6b04cc8c54d913d959de419488fe0cf641f2b2e783dc5bfcf2a478193a6cdb76"
@@ -28,7 +28,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,7 +69,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -93,11 +93,40 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>계약년월</th>\n      <th>시군구</th>\n      <th>본번</th>\n      <th>부번</th>\n      <th>단지명</th>\n      <th>전용면적(㎡)</th>\n      <th>거래금액(만원)</th>\n      <th>층</th>\n      <th>건축년도</th>\n      <th>해제사유발생일</th>\n      <th>계약년월일</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>201701</td>\n      <td>세종특별자치시 고운동</td>\n      <td>1401</td>\n      <td>0</td>\n      <td>가락마을13단지(대광로제비앙)</td>\n      <td>59.6550</td>\n      <td>23000</td>\n      <td>11</td>\n      <td>2015</td>\n      <td>NaN</td>\n      <td>2017-01-19</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>201701</td>\n      <td>세종특별자치시 고운동</td>\n      <td>1393</td>\n      <td>0</td>\n      <td>가락마을15단지(중흥파크뷰)</td>\n      <td>84.9894</td>\n      <td>32000</td>\n      <td>3</td>\n      <td>2015</td>\n      <td>NaN</td>\n      <td>2017-01-02</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>201701</td>\n      <td>세종특별자치시 고운동</td>\n      <td>1395</td>\n      <td>0</td>\n      <td>가락마을16단지(에듀그린)</td>\n      <td>84.8788</td>\n      <td>32500</td>\n      <td>21</td>\n      <td>2015</td>\n      <td>NaN</td>\n      <td>2017-01-14</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>201701</td>\n      <td>세종특별자치시 고운동</td>\n      <td>1386</td>\n      <td>0</td>\n      <td>가락마을17단지(골드클래스)</td>\n      <td>59.9159</td>\n      <td>25100</td>\n      <td>7</td>\n      <td>2015</td>\n      <td>NaN</td>\n      <td>2017-01-09</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>201701</td>\n      <td>세종특별자치시 고운동</td>\n      <td>1390</td>\n      <td>0</td>\n      <td>가락마을21단지(에듀포레)</td>\n      <td>99.9434</td>\n      <td>32250</td>\n      <td>3</td>\n      <td>2015</td>\n      <td>NaN</td>\n      <td>2017-01-09</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 25
+     "execution_count": 4
     }
    ],
    "source": [
     "apt_tra.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "array(['세종특별자치시 고운동', '세종특별자치시 금남면 용포리', '세종특별자치시 나성동', '세종특별자치시 도담동',\n",
+       "       '세종특별자치시 보람동', '세종특별자치시 부강면 부강리', '세종특별자치시 소담동', '세종특별자치시 아름동',\n",
+       "       '세종특별자치시 어진동', '세종특별자치시 연동면 명학리', '세종특별자치시 연서면 봉암리',\n",
+       "       '세종특별자치시 장군면 금암리', '세종특별자치시 전동면 노장리', '세종특별자치시 전의면 동교리',\n",
+       "       '세종특별자치시 조치원읍 남리', '세종특별자치시 조치원읍 번암리', '세종특별자치시 조치원읍 서창리',\n",
+       "       '세종특별자치시 조치원읍 신안리', '세종특별자치시 조치원읍 신흥리', '세종특별자치시 조치원읍 죽림리',\n",
+       "       '세종특별자치시 조치원읍 침산리', '세종특별자치시 종촌동', '세종특별자치시 한솔동',\n",
+       "       '세종특별자치시 전의면 유천리', '세종특별자치시 조치원읍 교리', '세종특별자치시 소정면 운당리',\n",
+       "       '세종특별자치시 새롬동', '세종특별자치시 조치원읍 정리', '세종특별자치시 다정동', '세종특별자치시 대평동',\n",
+       "       '세종특별자치시 조치원읍 원리', '세종특별자치시 반곡동', '세종특별자치시 가람동'], dtype=object)"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 6
+    }
+   ],
+   "source": [
+    "apt_tra['시군구'].unique()"
    ]
   },
   {
