--- a/preprocess.ipynb
+++ b/preprocess.ipynb
@@ -205,6 +205,15 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 58,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "b_info.to_csv('test.csv', encoding='utf-8-sig')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
