add: fetching distributed API data

--- a/data_foundation.ipynb
+++ b/data_foundation.ipynb
@@ -266,6 +266,122 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "140"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 17
+    }
+   ],
+   "source": [
+    "len(law_codes)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(columns=['대지주소','시군구코드'])\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "  대지주소 시군구코드\n",
+       "0  123   543"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>대지주소</th>\n      <th>시군구코드</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>123</td>\n      <td>543</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 30
+    }
+   ],
+   "source": [
+    "df.append({'대지주소':'123', '시군구코드':'543'}, ignore_index=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "error",
+     "ename": "NameError",
+     "evalue": "name 'null' is not defined",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-32-d9c7466166ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m\"bjdongCd\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"10200\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"bldNm\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"새샘마을1단지\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;34m\"block\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnull\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;34m\"bun\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"0032\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;34m\"crtnDay\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"20190122\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'null' is not defined"
+     ]
+    }
+   ],
+   "source": [
+    "data= {\n",
+    "    \"area\": \"0.5566\",\n",
+    "    \"bjdongCd\": \"10200\",\n",
+    "    \"bldNm\": \"새샘마을1단지\",\n",
+    "    \"block\": None,\n",
+    "    \"bun\": \"0032\",\n",
+    "    \"crtnDay\": \"20190122\",\n",
+    "    \"dongNm\": \"114동\",\n",
+    "    \"etcPurps\": \"어린이집\",\n",
+    "    \"etcStrct\": \"철근콘크리트구조\",\n",
+    "    \"exposPubuseGbCd\": \"2\",\n",
+    "    \"exposPubuseGbCdNm\": \"공용\",\n",
+    "    \"flrGbCd\": \"20\",\n",
+    "    \"flrGbCdNm\": \"지상\",\n",
+    "    \"flrNo\": \"18.0\",\n",
+    "    \"flrNoNm\": \"1층\",\n",
+    "    \"hoNm\": \"1801\",\n",
+    "    \"ji\": \"0053\",\n",
+    "    \"lot\": None,\n",
+    "    \"mainAtchGbCd\": \"1\",\n",
+    "    \"mainAtchGbCdNm\": \"부속건축물\",\n",
+    "    \"mainPurpsCd\": \"02001\",\n",
+    "    \"mainPurpsCdNm\": \"아파트\",\n",
+    "    \"mgmBldrgstPk\": \"36110-5000155757\",\n",
+    "    \"naBjdongCd\": \"10203\",\n",
+    "    \"naMainBun\": \"357.0\",\n",
+    "    \"naRoadCd\": \"361103350790\",\n",
+    "    \"naSubBun\": \"0.0\",\n",
+    "    \"naUgrndCd\": \"0\",\n",
+    "    \"newPlatPlc\": \"세종특별자치시  남세종로 357\",\n",
+    "    \"platGbCd\": \"0\",\n",
+    "    \"platPlc\": \"세종특별자치시  소담동 32-53번지\",\n",
+    "    \"regstrGbCd\": \"2\",\n",
+    "    \"regstrGbCdNm\": \"집합\",\n",
+    "    \"regstrKindCd\": \"4\",\n",
+    "    \"regstrKindCdNm\": \"전유부\",\n",
+    "    \"rnum\": \"1\",\n",
+    "    \"sigunguCd\": \"36110\",\n",
+    "    \"splotNm\": None,\n",
+    "    \"strctCd\": \"21\",\n",
+    "    \"strctCdNm\": \"철근콘크리트구조\"\n",
+    "  }"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
