--- a/data_apt_ofi_apiset.ipynb
+++ b/data_apt_ofi_apiset.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 205,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,13 +42,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 206,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "def call_open_api(call_code, yyyymm) : \r\n",
     "\r\n",
-    "    URL = 'http://openapi.molit.go.kr/OpenAPI_ToolInstallPackage/service/rest/RTMSOBJSvc/{}'.format(call_code)\r\n",
+    "    buliding_type = call_code.split('c')[1][:3]\r\n",
+    "    #different server by buliding type\r\n",
+    "    server = ':8081' if buliding_type == 'Apt' else ''\r\n",
+    "    URL = 'http://openapi.molit.go.kr{}'.format(server)+'/OpenAPI_ToolInstallPackage/service/rest/RTMSOBJSvc/{}'.format(call_code)\r\n",
     "\r\n",
     "    \r\n",
     "    queryParams = '?' + urlencode(\r\n",
@@ -76,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 207,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +89,6 @@
     "    new_data = api_data['response']['body']['items']['item']\r\n",
     "\r\n",
     "    total = api_data['response']['body']['totalCount']\r\n",
-    "\r\n",
     "    df = pd.DataFrame.from_dict(new_data, orient= 'index').transpose() if total == '1' else pd.DataFrame(new_data)\r\n",
     " \r\n",
     "    return df"
@@ -101,35 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>단지</th>\n      <th>법정동</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n      <th>지번</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>368</th>\n      <td>8,500</td>\n      <td>2014</td>\n      <td>2021</td>\n      <td>푸르지오시티</td>\n      <td>어진동</td>\n      <td>2</td>\n      <td>18</td>\n      <td>23.74</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>21.03.09</td>\n      <td>O</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>369</th>\n      <td>8,500</td>\n      <td>2014</td>\n      <td>2021</td>\n      <td>푸르지오시티</td>\n      <td>어진동</td>\n      <td>2</td>\n      <td>18</td>\n      <td>23.74</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>370</th>\n      <td>9,500</td>\n      <td>2014</td>\n      <td>2021</td>\n      <td>푸르지오시티</td>\n      <td>어진동</td>\n      <td>2</td>\n      <td>19</td>\n      <td>23.74</td>\n      <td>36110</td>\n      <td>17</td>\n      <td>None</td>\n      <td>None</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>371</th>\n      <td>8,650</td>\n      <td>2014</td>\n      <td>2021</td>\n      <td>푸르지오시티</td>\n      <td>어진동</td>\n      <td>2</td>\n      <td>25</td>\n      <td>24.12</td>\n      <td>36110</td>\n      <td>6</td>\n      <td>None</td>\n      <td>None</td>\n      <td>NaN</td>\n    </tr>\n    <tr>\n      <th>372</th>\n      <td>8,100</td>\n      <td>2014</td>\n      <td>2021</td>\n      <td>2차푸르지오시티</td>\n      <td>어진동</td>\n      <td>2</td>\n      <td>27</td>\n      <td>21.92</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n      <td>NaN</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "      거래금액  건축년도     년        단지  법정동  월   일   전용면적   지역코드   층   해제사유발생일  \\\n368  8,500  2014  2021    푸르지오시티  어진동  2  18  23.74  36110   5  21.03.09   \n369  8,500  2014  2021    푸르지오시티  어진동  2  18  23.74  36110   5      None   \n370  9,500  2014  2021    푸르지오시티  어진동  2  19  23.74  36110  17      None   \n371  8,650  2014  2021    푸르지오시티  어진동  2  25  24.12  36110   6      None   \n372  8,100  2014  2021  2차푸르지오시티  어진동  2  27  21.92  36110   7      None   \n\n     해제여부   지번  \n368     O  NaN  \n369  None  NaN  \n370  None  NaN  \n371  None  NaN  \n372  None  NaN  "
-     },
-     "execution_count": 209,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "api_data = pd.DataFrame()\r\n",
-    "for i in list_preiod:\r\n",
-    "\r\n",
-    "    df = writeDatafram('getRTMSDataSvcOffiTrade',i)\r\n",
-    "\r\n",
-    "    api_data = api_data.append(df, ignore_index=True)\r\n",
-    "\r\n",
-    "#api_data['name'] = api_data['aptTypeNm'] + api_data['regionCd'] + api_data['regionNm']\r\n",
-    "#api_data = api_data.set_index('name')\r\n",
-    "api_data.tail()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -137,7 +111,40 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24412</th>\n      <td>7,000</td>\n      <td>2001</td>\n      <td>2021</td>\n      <td>전의면 유천리</td>\n      <td>민석그린</td>\n      <td>2</td>\n      <td>18</td>\n      <td>59.94</td>\n      <td>528</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24413</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>3</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24414</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>23</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24415</th>\n      <td>5,000</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>1</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24416</th>\n      <td>6,300</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>8</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "        거래금액  건축년도     년      법정동   아파트  월   일   전용면적    지번   지역코드  층 해제사유발생일  \\\n24412  7,000  2001  2021  전의면 유천리  민석그린  2  18  59.94   528  36110  5    None   \n24413  5,200  1994  2021  전동면 노장리    도원  2   3  49.32   586  36110  5    None   \n24414  5,200  1994  2021  전동면 노장리    도원  2  23  49.32   586  36110  5    None   \n24415  5,000  1996  2021  소정면 운당리   무궁화  2   1   59.4  35-1  36110  7    None   \n24416  6,300  1996  2021  소정면 운당리   무궁화  2   8   59.4  35-1  36110  7    None   \n\n       해제여부  \n24412  None  \n24413  None  \n24414  None  \n24415  None  \n24416  None  "
      },
-     "execution_count": 10,
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "apt_data_rent = pd.DataFrame()\r\n",
+    "for i in list_preiod:\r\n",
+    "\r\n",
+    "    df = writeDatafram('getRTMSDataSvcAptTrade',i)\r\n",
+    "    apt_data_rent = apt_data_rent.append(df, ignore_index=True)\r\n",
+    "\r\n",
+    "display(apt_data_rent.tail())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 24,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "apt_data_rent.to_csv('data/apt_rent.csv')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 25,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24412</th>\n      <td>7,000</td>\n      <td>2001</td>\n      <td>2021</td>\n      <td>전의면 유천리</td>\n      <td>민석그린</td>\n      <td>2</td>\n      <td>18</td>\n      <td>59.94</td>\n      <td>528</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24413</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>3</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24414</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>23</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24415</th>\n      <td>5,000</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>1</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24416</th>\n      <td>6,300</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>8</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "        거래금액  건축년도     년      법정동   아파트  월   일   전용면적    지번   지역코드  층 해제사유발생일  \\\n24412  7,000  2001  2021  전의면 유천리  민석그린  2  18  59.94   528  36110  5    None   \n24413  5,200  1994  2021  전동면 노장리    도원  2   3  49.32   586  36110  5    None   \n24414  5,200  1994  2021  전동면 노장리    도원  2  23  49.32   586  36110  5    None   \n24415  5,000  1996  2021  소정면 운당리   무궁화  2   1   59.4  35-1  36110  7    None   \n24416  6,300  1996  2021  소정면 운당리   무궁화  2   8   59.4  35-1  36110  7    None   \n\n       해제여부  \n24412  None  \n24413  None  \n24414  None  \n24415  None  \n24416  None  "
+     },
+     "execution_count": 25,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,9 +157,16 @@
     "\r\n",
     "    api_data_trd = api_data_trd.append(df, ignore_index=True)\r\n",
     "\r\n",
-    "#api_data['name'] = api_data['aptTypeNm'] + api_data['regionCd'] + api_data['regionNm']\r\n",
-    "#api_data = api_data.set_index('name')\r\n",
     "api_data_trd.tail()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "api_data_trd.to_csv('data/apt_trd.csv')"
    ]
   },
   {
@@ -185,8 +199,6 @@
     "\r\n",
     "    ofi_data_rent = ofi_data_rent.append(df, ignore_index=True)\r\n",
     "\r\n",
-    "#api_data['name'] = api_data['aptTypeNm'] + api_data['regionCd'] + api_data['regionNm']\r\n",
-    "#api_data = api_data.set_index('name')\r\n",
     "ofi_data_rent.tail()"
    ]
   },
@@ -214,6 +226,13 @@
     "\r\n",
     "ofi_data_trd.tail()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
