--- a/data_foundation.ipynb
+++ b/data_foundation.ipynb
@@ -238,146 +238,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 법정동 코드 가져오기\n",
-    "law_codes = b_info['법정동코드'].unique().tolist()"
+    "# API를 통해 생생된 전유부 Data 가져오기\n",
+    "b_unit = pd.read_csv('전유부.csv')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 26,
    "metadata": {},
-   "outputs": [
-    {
-     "output_type": "execute_result",
-     "data": {
-      "text/plain": [
-       "int"
-      ]
-     },
-     "metadata": {},
-     "execution_count": 14
-    }
-   ],
-   "source": []
+   "outputs": [],
+   "source": [
+    "# Covert Data Types\n",
+    "b_unit['시군구코드'] = b_unit['시군구코드'].astype(object)\n",
+    "b_unit['법정동코드'] = b_unit['법정동코드'].astype(object)\n",
+    "b_unit['층번호'] = b_unit['층번호'].astype(np.int64)\n",
+    "b_unit['번'] = b_unit['번'].astype(object)\n",
+    "b_unit['지'] = b_unit['지'].astype(object)\n",
+    "b_unit['층구분코드'] = b_unit['층구분코드'].astype(object)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "140"
+       "대지주소         object\n",
+       "시군구코드        object\n",
+       "법정동코드        object\n",
+       "동명칭          object\n",
+       "호명칭          object\n",
+       "층구분코드        object\n",
+       "층번호           int64\n",
+       "면적(전용면적)    float64\n",
+       "건물명          object\n",
+       "번            object\n",
+       "지            object\n",
+       "주용도코드        object\n",
+       "dtype: object"
       ]
      },
      "metadata": {},
-     "execution_count": 17
+     "execution_count": 27
     }
    ],
    "source": [
-    "len(law_codes)"
+    "b_unit.dtypes"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 28,
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "df = pd.DataFrame(columns=['대지주소','시군구코드'])\n",
-    "\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "  대지주소 시군구코드\n",
-       "0  123   543"
+       "                       대지주소  시군구코드  법정동코드      동명칭  호명칭 층구분코드  층번호  면적(전용면적)  \\\n",
+       "0  세종특별자치시  반곡동 4121-1002번지  36110  10100  주건축물제1동  101    20    1    3.2402   \n",
+       "1  세종특별자치시  반곡동 4121-1002번지  36110  10100  주건축물제1동  101    20    1   39.3700   \n",
+       "2  세종특별자치시  반곡동 4121-1002번지  36110  10100  주건축물제1동  101    20    1   10.3346   \n",
+       "\n",
+       "     건물명     번     지  주용도코드  \n",
+       "0  세종펠리스  4121  1002  일반음식점  \n",
+       "1  세종펠리스  4121  1002  일반음식점  \n",
+       "2  세종펠리스  4121  1002  일반음식점  "
       ],
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>대지주소</th>\n      <th>시군구코드</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>123</td>\n      <td>543</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>대지주소</th>\n      <th>시군구코드</th>\n      <th>법정동코드</th>\n      <th>동명칭</th>\n      <th>호명칭</th>\n      <th>층구분코드</th>\n      <th>층번호</th>\n      <th>면적(전용면적)</th>\n      <th>건물명</th>\n      <th>번</th>\n      <th>지</th>\n      <th>주용도코드</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>세종특별자치시  반곡동 4121-1002번지</td>\n      <td>36110</td>\n      <td>10100</td>\n      <td>주건축물제1동</td>\n      <td>101</td>\n      <td>20</td>\n      <td>1</td>\n      <td>3.2402</td>\n      <td>세종펠리스</td>\n      <td>4121</td>\n      <td>1002</td>\n      <td>일반음식점</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>세종특별자치시  반곡동 4121-1002번지</td>\n      <td>36110</td>\n      <td>10100</td>\n      <td>주건축물제1동</td>\n      <td>101</td>\n      <td>20</td>\n      <td>1</td>\n      <td>39.3700</td>\n      <td>세종펠리스</td>\n      <td>4121</td>\n      <td>1002</td>\n      <td>일반음식점</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>세종특별자치시  반곡동 4121-1002번지</td>\n      <td>36110</td>\n      <td>10100</td>\n      <td>주건축물제1동</td>\n      <td>101</td>\n      <td>20</td>\n      <td>1</td>\n      <td>10.3346</td>\n      <td>세종펠리스</td>\n      <td>4121</td>\n      <td>1002</td>\n      <td>일반음식점</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
      },
      "metadata": {},
-     "execution_count": 30
+     "execution_count": 28
     }
    ],
    "source": [
-    "df.append({'대지주소':'123', '시군구코드':'543'}, ignore_index=True)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 32,
-   "metadata": {},
-   "outputs": [
-    {
-     "output_type": "error",
-     "ename": "NameError",
-     "evalue": "name 'null' is not defined",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-32-d9c7466166ae>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      3\u001b[0m     \u001b[0;34m\"bjdongCd\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"10200\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m     \u001b[0;34m\"bldNm\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"새샘마을1단지\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 5\u001b[0;31m     \u001b[0;34m\"block\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0mnull\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      6\u001b[0m     \u001b[0;34m\"bun\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"0032\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      7\u001b[0m     \u001b[0;34m\"crtnDay\"\u001b[0m\u001b[0;34m:\u001b[0m \u001b[0;34m\"20190122\"\u001b[0m\u001b[0;34m,\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'null' is not defined"
-     ]
-    }
-   ],
-   "source": [
-    "data= {\n",
-    "    \"area\": \"0.5566\",\n",
-    "    \"bjdongCd\": \"10200\",\n",
-    "    \"bldNm\": \"새샘마을1단지\",\n",
-    "    \"block\": None,\n",
-    "    \"bun\": \"0032\",\n",
-    "    \"crtnDay\": \"20190122\",\n",
-    "    \"dongNm\": \"114동\",\n",
-    "    \"etcPurps\": \"어린이집\",\n",
-    "    \"etcStrct\": \"철근콘크리트구조\",\n",
-    "    \"exposPubuseGbCd\": \"2\",\n",
-    "    \"exposPubuseGbCdNm\": \"공용\",\n",
-    "    \"flrGbCd\": \"20\",\n",
-    "    \"flrGbCdNm\": \"지상\",\n",
-    "    \"flrNo\": \"18.0\",\n",
-    "    \"flrNoNm\": \"1층\",\n",
-    "    \"hoNm\": \"1801\",\n",
-    "    \"ji\": \"0053\",\n",
-    "    \"lot\": None,\n",
-    "    \"mainAtchGbCd\": \"1\",\n",
-    "    \"mainAtchGbCdNm\": \"부속건축물\",\n",
-    "    \"mainPurpsCd\": \"02001\",\n",
-    "    \"mainPurpsCdNm\": \"아파트\",\n",
-    "    \"mgmBldrgstPk\": \"36110-5000155757\",\n",
-    "    \"naBjdongCd\": \"10203\",\n",
-    "    \"naMainBun\": \"357.0\",\n",
-    "    \"naRoadCd\": \"361103350790\",\n",
-    "    \"naSubBun\": \"0.0\",\n",
-    "    \"naUgrndCd\": \"0\",\n",
-    "    \"newPlatPlc\": \"세종특별자치시  남세종로 357\",\n",
-    "    \"platGbCd\": \"0\",\n",
-    "    \"platPlc\": \"세종특별자치시  소담동 32-53번지\",\n",
-    "    \"regstrGbCd\": \"2\",\n",
-    "    \"regstrGbCdNm\": \"집합\",\n",
-    "    \"regstrKindCd\": \"4\",\n",
-    "    \"regstrKindCdNm\": \"전유부\",\n",
-    "    \"rnum\": \"1\",\n",
-    "    \"sigunguCd\": \"36110\",\n",
-    "    \"splotNm\": None,\n",
-    "    \"strctCd\": \"21\",\n",
-    "    \"strctCdNm\": \"철근콘크리트구조\"\n",
-    "  }"
+    "b_unit.head(3)"
    ]
   },
   {
