--- a/data_apt_ofi_apiset.ipynb
+++ b/data_apt_ofi_apiset.ipynb
@@ -30,19 +30,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# to get the period data\r\n",
-    "preiod = pd.read_csv('api_tradePrc.csv')\r\n",
+    "preiod = pd.read_csv('data/api_tradePrc.csv')\r\n",
     "list_preiod = preiod.columns\r\n",
     "list_preiod = list_preiod[4:]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -69,17 +69,12 @@
     "    xml_parse =  xmltodict.parse(decode_data)\r\n",
     "    xml_dict = json.loads(json.dumps(xml_parse))\r\n",
     "\r\n",
-    "    return xml_dict\r\n",
-    "\r\n",
-    "# cc = xmltodict.parse(tree) # return collections.OrderedDict\r\n",
-    "# dd = json.loads(json.dumps(cc)) # return dict\r\n",
-    "# animals = dd['animals']['animal']\r\n",
-    "# print(animals) # 결과를 출력한다"
+    "    return xml_dict"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -103,13 +98,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24412</th>\n      <td>7,000</td>\n      <td>2001</td>\n      <td>2021</td>\n      <td>전의면 유천리</td>\n      <td>민석그린</td>\n      <td>2</td>\n      <td>18</td>\n      <td>59.94</td>\n      <td>528</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24413</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>3</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24414</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>23</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24415</th>\n      <td>5,000</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>1</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24416</th>\n      <td>6,300</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>8</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "        거래금액  건축년도     년      법정동   아파트  월   일   전용면적    지번   지역코드  층 해제사유발생일  \\\n24412  7,000  2001  2021  전의면 유천리  민석그린  2  18  59.94   528  36110  5    None   \n24413  5,200  1994  2021  전동면 노장리    도원  2   3  49.32   586  36110  5    None   \n24414  5,200  1994  2021  전동면 노장리    도원  2  23  49.32   586  36110  5    None   \n24415  5,000  1996  2021  소정면 운당리   무궁화  2   1   59.4  35-1  36110  7    None   \n24416  6,300  1996  2021  소정면 운당리   무궁화  2   8   59.4  35-1  36110  7    None   \n\n       해제여부  \n24412  None  \n24413  None  \n24414  None  \n24415  None  \n24416  None  "
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>보증금액</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>월세금액</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>40708</th>\n      <td>2000</td>\n      <td>2021</td>\n      <td>금남면 용포리</td>\n      <td>1,000</td>\n      <td>두진리버빌</td>\n      <td>2</td>\n      <td>40</td>\n      <td>5</td>\n      <td>43.008</td>\n      <td>320</td>\n      <td>36110</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>40709</th>\n      <td>2000</td>\n      <td>2021</td>\n      <td>금남면 용포리</td>\n      <td>500</td>\n      <td>두진리버빌</td>\n      <td>2</td>\n      <td>40</td>\n      <td>9</td>\n      <td>43.008</td>\n      <td>320</td>\n      <td>36110</td>\n      <td>3</td>\n    </tr>\n    <tr>\n      <th>40710</th>\n      <td>2000</td>\n      <td>2021</td>\n      <td>금남면 용포리</td>\n      <td>22,000</td>\n      <td>두진리버빌</td>\n      <td>2</td>\n      <td>0</td>\n      <td>15</td>\n      <td>59.8676</td>\n      <td>320</td>\n      <td>36110</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>40711</th>\n      <td>2001</td>\n      <td>2021</td>\n      <td>전의면 유천리</td>\n      <td>1,000</td>\n      <td>민석그린</td>\n      <td>2</td>\n      <td>27</td>\n      <td>16</td>\n      <td>59.94</td>\n      <td>528</td>\n      <td>36110</td>\n      <td>1</td>\n    </tr>\n    <tr>\n      <th>40712</th>\n      <td>2001</td>\n      <td>2021</td>\n      <td>전의면 유천리</td>\n      <td>4,500</td>\n      <td>민석그린</td>\n      <td>2</td>\n      <td>0</td>\n      <td>23</td>\n      <td>59.94</td>\n      <td>528</td>\n      <td>36110</td>\n      <td>1</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
+      "text/plain": "       건축년도     년      법정동    보증금액    아파트  월 월세금액   일     전용면적   지번   지역코드  층\n40708  2000  2021  금남면 용포리   1,000  두진리버빌  2   40   5   43.008  320  36110  3\n40709  2000  2021  금남면 용포리     500  두진리버빌  2   40   9   43.008  320  36110  3\n40710  2000  2021  금남면 용포리  22,000  두진리버빌  2    0  15  59.8676  320  36110  1\n40711  2001  2021  전의면 유천리   1,000   민석그린  2   27  16    59.94  528  36110  1\n40712  2001  2021  전의면 유천리   4,500   민석그린  2    0  23    59.94  528  36110  1"
      },
      "metadata": {},
      "output_type": "display_data"
@@ -119,7 +114,7 @@
     "apt_data_rent = pd.DataFrame()\r\n",
     "for i in list_preiod:\r\n",
     "\r\n",
-    "    df = writeDatafram('getRTMSDataSvcAptTrade',i)\r\n",
+    "    df = writeDatafram('getRTMSDataSvcAptRent',i)\r\n",
     "    apt_data_rent = apt_data_rent.append(df, ignore_index=True)\r\n",
     "\r\n",
     "display(apt_data_rent.tail())"
@@ -127,16 +122,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
-    "apt_data_rent.to_csv('data/apt_rent.csv')"
+    "apt_data_rent.to_csv('data/아파트_전월세.csv',encoding='utf-8-sig')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +139,7 @@
       "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>거래금액</th>\n      <th>건축년도</th>\n      <th>년</th>\n      <th>법정동</th>\n      <th>아파트</th>\n      <th>월</th>\n      <th>일</th>\n      <th>전용면적</th>\n      <th>지번</th>\n      <th>지역코드</th>\n      <th>층</th>\n      <th>해제사유발생일</th>\n      <th>해제여부</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>24412</th>\n      <td>7,000</td>\n      <td>2001</td>\n      <td>2021</td>\n      <td>전의면 유천리</td>\n      <td>민석그린</td>\n      <td>2</td>\n      <td>18</td>\n      <td>59.94</td>\n      <td>528</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24413</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>3</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24414</th>\n      <td>5,200</td>\n      <td>1994</td>\n      <td>2021</td>\n      <td>전동면 노장리</td>\n      <td>도원</td>\n      <td>2</td>\n      <td>23</td>\n      <td>49.32</td>\n      <td>586</td>\n      <td>36110</td>\n      <td>5</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24415</th>\n      <td>5,000</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>1</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n    <tr>\n      <th>24416</th>\n      <td>6,300</td>\n      <td>1996</td>\n      <td>2021</td>\n      <td>소정면 운당리</td>\n      <td>무궁화</td>\n      <td>2</td>\n      <td>8</td>\n      <td>59.4</td>\n      <td>35-1</td>\n      <td>36110</td>\n      <td>7</td>\n      <td>None</td>\n      <td>None</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
       "text/plain": "        거래금액  건축년도     년      법정동   아파트  월   일   전용면적    지번   지역코드  층 해제사유발생일  \\\n24412  7,000  2001  2021  전의면 유천리  민석그린  2  18  59.94   528  36110  5    None   \n24413  5,200  1994  2021  전동면 노장리    도원  2   3  49.32   586  36110  5    None   \n24414  5,200  1994  2021  전동면 노장리    도원  2  23  49.32   586  36110  5    None   \n24415  5,000  1996  2021  소정면 운당리   무궁화  2   1   59.4  35-1  36110  7    None   \n24416  6,300  1996  2021  소정면 운당리   무궁화  2   8   59.4  35-1  36110  7    None   \n\n       해제여부  \n24412  None  \n24413  None  \n24414  None  \n24415  None  \n24416  None  "
      },
-     "execution_count": 25,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,11 +157,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "api_data_trd.to_csv('data/apt_trd.csv')"
+    "api_data_trd.to_csv('data/아파트_매매.csv',encoding='utf-8-sig')"
    ]
   },
   {
